[build-system]
requires = [
    "setuptools >= 61.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["phx.fix", "phx.fix.app", "phx.fix.model", "phx.fix.tracker", "phx.fix.utils", "phx.utils"]

[project]
name = "phx-fix-base"
description = "Phoenix Prime FIX base components"
version = "0.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Daniel Egloff", email = "daniel.egloff@matrixport.com"},
]
maintainers = [
  {name = "Daniel Egloff", email = "daniel.egloff@matrixport.com"}
]
requires-python = ">= 3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "tzlocal",
    "pytz",
    "requests",
    "sortedcontainers",
    "more-itertools",
    "tabulate",
    "pyyaml",
    "tomli",
    "tomli-w",
    "deepdiff",
    "prometheus_client",
    "faster-fifo",
]